Fix Alignment

--- a/CoreDev-Frontend/src/pages/OurTeam/OurTeam.css
+++ b/CoreDev-Frontend/src/pages/OurTeam/OurTeam.css
@@ -161,7 +161,7 @@ p {
     padding: 1rem;
     margin: 1rem;
     border-radius: 0.5rem;
-    width: 80%;
+    width: 69%;
 }
 .team-wrapper .team {
     display: flex;
@@ -254,7 +254,7 @@ p {
 
 .organizational-chart-container {
     background-color: white;
-    margin: 2rem 9.5rem;
+    margin: 2rem 18.5rem;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
